; ModuleID = '/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmrvl_sdio.c_btmrvl_sdio_enable_host_int.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/bluetooth/extr_btmrvl_sdio.c_btmrvl_sdio_enable_host_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btmrvl_sdio_card = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@HIM_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btmrvl_sdio_card*)* @btmrvl_sdio_enable_host_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @btmrvl_sdio_enable_host_int(%struct.btmrvl_sdio_card* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.btmrvl_sdio_card*, align 8
  %4 = alloca i32, align 4
  store %struct.btmrvl_sdio_card* %0, %struct.btmrvl_sdio_card** %3, align 8
  %5 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %6 = icmp ne %struct.btmrvl_sdio_card* %5, null
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %9 = getelementptr inbounds %struct.btmrvl_sdio_card, %struct.btmrvl_sdio_card* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %15, label %12

12:                                               ; preds = %7, %1
  %13 = load i32, i32* @EINVAL, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  br label %30

15:                                               ; preds = %7
  %16 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %17 = getelementptr inbounds %struct.btmrvl_sdio_card, %struct.btmrvl_sdio_card* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @sdio_claim_host(i32 %18)
  %20 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %21 = load i32, i32* @HIM_ENABLE, align 4
  %22 = call i32 @btmrvl_sdio_enable_host_int_mask(%struct.btmrvl_sdio_card* %20, i32 %21)
  store i32 %22, i32* %4, align 4
  %23 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %24 = call i32 @btmrvl_sdio_get_rx_unit(%struct.btmrvl_sdio_card* %23)
  %25 = load %struct.btmrvl_sdio_card*, %struct.btmrvl_sdio_card** %3, align 8
  %26 = getelementptr inbounds %struct.btmrvl_sdio_card, %struct.btmrvl_sdio_card* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @sdio_release_host(i32 %27)
  %29 = load i32, i32* %4, align 4
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %15, %12
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @sdio_claim_host(i32) #1

declare dso_local i32 @btmrvl_sdio_enable_host_int_mask(%struct.btmrvl_sdio_card*, i32) #1

declare dso_local i32 @btmrvl_sdio_get_rx_unit(%struct.btmrvl_sdio_card*) #1

declare dso_local i32 @sdio_release_host(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
